k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: eugene-deployment-auth
  namespace: eugene
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: eugene-auth
  template:
    metadata:
      labels:
        app: eugene-auth
    spec:
      containers:
        - name: auth
          image: ugindev/auth:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
