k8s/discounts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: eugene-deployment-discounts
  namespace: eugene
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: eugene-discounts
  template:
    metadata:
      labels:
        app: eugene-discounts
    spec:
      containers:
        - name: discounts
          image: ugindev/discounts:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
