k8s/items-deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata: 
    name: eugene-deployment-items
    namespace: eugene
  spec: 
    replicas: 1
    selector:
      matchLabels:
        app: eugene-items
    template:
      metadata:
        labels:
          app: eugene-items
      spec:
        containers:
          - name: items
            image: ugindev/items:latest
            imagePullPolicy: Always
            ports:
              - containerPort: 3003
