k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eugene-mongo
  namespace: eugene
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eugene-mongo
  template:
    metadata:
      labels:
        app: eugene-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:6
          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db

      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
