k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eugene-service-client
  namespace: eugene
spec:
  selector:
    app: eugene-client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
