k8s/discounts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eugene-service-discounts
  namespace: eugene
spec:
  selector:
    app: eugene-discounts
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
