k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eugene-service-mongo
  namespace: eugene
spec:
  type: ClusterIP
  selector:
    app: eugene-mongo
  ports:
    - port: 27017
      targetPort: 27017
