k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eugene-ingress
  namespace: eugene
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: foodie.eugeneasiedu.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eugene-service-client
                port: 
                  number: 80  

          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: eugene-service-auth
                port:
                  number: 3001

          - path: /api/items
            pathType: Prefix
            backend:
              service:
                name: eugene-service-items
                port:
                  number: 3003

          - path: /api/discounts
            pathType: Prefix
            backend:
              service:
                name: eugene-service-discounts
                port:
                  number: 3002
